--- a/app/src/main/res/layout/dialog_add_currency.xml
+++ b/app/src/main/res/layout/dialog_add_currency.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <Spinner
-        android:id="@+id/add_currency_spinner"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <Spinner
+            android:id="@+id/add_currency_from_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.5"
+            android:layout_marginRight="8dp" />
+
+        <Spinner
+            android:id="@+id/add_currency_to_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="8dp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/add_currency_button"
@@ -17,7 +34,8 @@
         android:layout_height="wrap_content"
         android:text="@string/add_currency_button"
         android:layout_gravity="center_horizontal"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp" />
+        android:layout_marginTop="8dp"
+        android:paddingLeft="64dp"
+        android:paddingRight="64dp" />
 
 </LinearLayout>
