--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_forecast"
-    android:name="com.github.nekdenis.currencylist.fragment.RatesFragment"
+    android:id="@+id/fragment_currencies"
+    android:name="com.github.nekdenis.currencylist.fragment.CurrenciesFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:layout="@android:layout/list_content" />
