--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.github.nekdenis.currencylist.activitytivity" >
-    <item android:id="@+id/action_add"
+    tools:context="com.github.nekdenis.currencylist.activitytivity">
+    <item
+        android:id="@+id/action_add"
         android:title="@string/action_add"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
