--- a/app/src/main/res/layout/list_item_rate_today.xml
+++ b/app/src/main/res/layout/list_item_rate_today.xml
@@ -6,23 +6,31 @@
 
     <TextView
         android:id="@+id/exchange_detail_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:layout_alignParentTop="true"
-        android:gravity="center_horizontal"
         tools:text="RUB-EUR"
         android:textSize="32sp" />
 
 
     <TextView
         android:id="@+id/exchange_detail_current"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:layout_below="@id/exchange_detail_name"
         android:gravity="start"
         tools:text="@string/exchange_current_label"
         android:textSize="24sp" />
+
+    <com.github.nekdenis.currencylist.view.ColumnGraph
+        android:id="@+id/exchange_detail_graph"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@id/exchange_detail_name"
+        android:layout_marginLeft="4dp"
+        android:layout_alignBottom="@id/exchange_detail_current"
+        android:layout_toRightOf="@id/exchange_detail_current" />
 
 </RelativeLayout>
