--- a/app/src/main/res/layout/fragment_exchange_detail.xml
+++ b/app/src/main/res/layout/fragment_exchange_detail.xml
@@ -30,6 +30,8 @@
         android:layout_below="@id/exchange_detail_current"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="50dp"
+        android:paddingBottom="50dp"
         android:layout_marginTop="8dp" />
 
     <LinearLayout
