--- a/app/src/main/res/menu/detailfragment.xml
+++ b/app/src/main/res/menu/detailfragment.xml
@@ -7,4 +7,9 @@
         android:title="@string/action_share"
         app:showAsAction="always"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
+    <item
+        android:id="@+id/action_delete"
+        android:title="@string/action_delete"
+        android:icon="@drawable/ab_ic_remove"
+        app:showAsAction="always"/>
 </menu>
