Swtiched to material appcompat

--- a/app/src/main/res/values-v14/styles.xml
+++ b/app/src/main/res/values-v14/styles.xml
@@ -18,8 +18,7 @@
 
     <!-- main activity action bar styles -->
     <style name="ActionBar.Solid.Sunshine.NoTitle" parent="@style/ActionBar.Solid.Sunshine">
-        <item name="android:displayOptions">useLogo|showHome</item>
-        <item name="android:logo">@drawable/abc_ic_clear</item>
+        <item name="android:displayOptions">showHome</item>
     </style>
 
 </resources>
