--- a/app/src/main/res/layout/list_item_rate.xml
+++ b/app/src/main/res/layout/list_item_rate.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/currency_path"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_alignParentTop="true"
-        tools:text="RUB-EUR"
-        android:textSize="22sp" />
+        app:cardCornerRadius="2dp"
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@android:color/white">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/currency_path"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_alignParentTop="true"
+                tools:text="RUB-EUR"
+                android:textSize="22sp" />
 
 
-    <TextView
-        android:id="@+id/currency_current_rate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_below="@id/currency_path"
-        tools:text="32"
-        android:textSize="24sp" />
-</RelativeLayout>
+            <TextView
+                android:id="@+id/currency_current_rate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_below="@id/currency_path"
+                tools:text="32"
+                android:textSize="24sp" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
