--- a/app/src/main/res/layout/list_item_rate_today.xml
+++ b/app/src/main/res/layout/list_item_rate_today.xml
@@ -1,35 +1,50 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/currency_path"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_alignParentTop="true"
-        tools:text="RUB-EUR"
-        android:textSize="32sp" />
-
-
-    <TextView
-        android:id="@+id/currency_current_rate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_below="@id/currency_path"
-        tools:text="32"
-        android:textSize="28sp" />
-
-    <com.github.nekdenis.currencylist.view.ColumnGraph
-        android:id="@+id/currency_graph"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignTop="@id/currency_path"
-        android:layout_marginLeft="4dp"
-        android:layout_alignBottom="@id/currency_current_rate"
-        android:layout_toRightOf="@id/currency_path" />
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="2dp"
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@android:color/white">
 
-</RelativeLayout>
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/currency_path"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_alignParentTop="true"
+                tools:text="RUB-EUR"
+                android:textSize="32sp" />
+
+
+            <TextView
+                android:id="@+id/currency_current_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_below="@id/currency_path"
+                tools:text="32"
+                android:textSize="28sp" />
+
+            <com.github.nekdenis.currencylist.view.ColumnGraph
+                android:id="@+id/currency_graph"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignTop="@id/currency_path"
+                android:layout_marginLeft="4dp"
+                android:layout_alignBottom="@id/currency_current_rate"
+                android:layout_toRightOf="@id/currency_path" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
